package structure.decoratorPattern.window;

public interface Window {

    void draw();

}
